# mcp-filesystem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  PUBLISHING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py
mcp_filesystem/: __init__.py  __main__.py  advanced.py  grep.py  operations.py  security.py  server.py
tests/: test_cli.py  test_end_to_end.py  test_example.py  test_grep_unit.py  test_integration.py  test_operations_unit.py  test_security_unit.py  test_server_unit.py  test_smoke.py
