[project]
name = "mcp-filesystem"
version = "0.1.0"
description = "MCP for filesystem search and manipulation. Supports more granular search, content search and file edits"
authors = [
    { name = "alex furrier", email = "safurrier@gmail.com" },
]
requires-python = ">= 3.9"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.9.0",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "mcp_filesystem",
]
